@@ -146,7 +146,10 @@ Activando el maximo turbo permitido, tambien hace una franja negra en el border,
 
 
 
--Quizá al mover rueda de ratón tiene que volver de menú espera tecla
+-En debug cpu, quizá al mover rueda de ratón tiene que volver de menú espera tecla. Si no, 
+es lo que hace que al moverse con la rueda por vista debug cpu, haya que hacer movimiento de raton para que funcione
+El problema es que mouse_wheel_vertical se lee y luego siempre se debe poner a 0
+Si la ponemos a 0 en bucle de leer tecla, luego no se lee realmente del menu debug cpu
 
 -confirmar parametros de Freehand en quill. crear grafico en illustrator y hacer las 8 posibles combinaciones
 
